--- a/src/content/posts/core-d20/cored20rpg-bestiary-roles-of-creatures.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-roles-of-creatures.mdx
@@ -17,6 +17,8 @@ tags:
   - Контроллер
   - Поддержка
   - Налетчик
+  - Атакующий
+  - Защитник
 ---
 
 Информация о существе в бестиарии состоит из двух частей. Первая – это статблок, который содержит в себе игромеханическую информацию о существе. Вторая – это описание существа, его места в мире, способов и методов взаимодействия с миром.
@@ -35,32 +37,43 @@ tags:
 
 Как мы уже показывали ранее в [Про классы, существа, роли, шаблоны часть 2 | Киборги и Чародеи (cyborgsandmages.com)](https://cyborgsandmages.com/posts/articles/about-creatures-roles-classes-2) можно выделять различные роли в зависимости от методики принятой автором. 
 
-Мы же будем использовать следующие роли для определения тактик существа:
+Мы же будем использовать следующие основные роли для определения тактик существа:
 
-- **Засадник**, он же **скрытень**.
 - **Артиллерия**, он же **снайпер**
 - **Громила**
 - **Солдат**
 - **Контролер**
 - **Поддержка**
+
+И можем выделить следующие дополнительные роли:
+
 - **Налетчик**
+- **Засадник**, он же **скрытень**.
 - **Лидер**, он же **командир**
+- **Атакующий**
+- **Защитник**
 
-**Артиллерия.** Артиллерийские существа лучше всего сражаются издалека. Будь то стрелы или магические лучи, эти существа всегда стараются держаться на расстоянии от своих врагов. Артиллерия отлично действует в сражении на расстоянии. Эти существа стреляют из луков, мечут огненные шары и просто атакуют с расстояния. Они сами хорошо защищены от дальнобойных атак, но уязвимы в рукопашном сражении. Они часто распределяют урон сразу по нескольким врагам на расстоянии. Во время сражения артиллерия держится за спиной громил и солдат, чтобы атаковать персонажей игроков с защищенных позиций. Обладая слабыми защитами, артиллерия зависит от союзников, которые должны оттягивать врагов на себя. Артиллерия ищут укрытия и возвышенности, с которых можно обрушить на них дождь разрушений. Также артиллерия будет стремится находится за какими-либо преградами, которые не позволят противнику быстро к ним добраться. Особую опасность артиллерия представляет для своих врагов во время ведения сконцентрированного огня по одной цели. Как правило, если противнику требуется более 1 хода чтобы добраться до артиллерии, то это означает что у противника уже начинаются проблемы. В свой ход в бою артиллерия обычно старается отойти от всех противников в радиусе 30 футов, ставит между собой и угрозой громилу, солдата или другого союзника, а затем атакует врага. Если их вынуждают вступить в ближний бой, большинство артиллерий делают все возможное, чтобы уйти, в том числе используют действие "Рывок" или "Отход". Если враги не приближаются, артиллерия двигаются так, чтобы держать противников на границе своей дистанции, и часто атакуют сначала самую большую угрозу для своих союзников.
+**Артиллерия.** Если такое существо сосредоточено на нанесении урона одному существу - то его мы называем **снайпером**, тогда как чистая **артиллерия** в первую очередь направлена на нанесение площадного урона. Артиллерийские существа лучше всего сражаются издалека. Будь то стрелы или магические лучи, эти существа всегда стараются держаться на расстоянии от своих врагов. Артиллерия отлично действует в сражении на расстоянии. Эти существа стреляют из луков, мечут огненные шары и просто атакуют с расстояния. Они сами хорошо защищены от дальнобойных атак, но уязвимы в рукопашном сражении. Они часто распределяют урон сразу по нескольким врагам на расстоянии. Во время сражения артиллерия держится за спиной громил и солдат, чтобы атаковать персонажей игроков с защищенных позиций. Обладая слабыми защитами, артиллерия зависит от союзников, которые должны оттягивать врагов на себя. Артиллерия ищут укрытия и возвышенности, с которых можно обрушить на них дождь разрушений. Также артиллерия будет стремится находится за какими-либо преградами, которые не позволят противнику быстро к ним добраться. Особую опасность артиллерия представляет для своих врагов во время ведения сконцентрированного огня по одной цели. Как правило, если противнику требуется более 1 хода чтобы добраться до артиллерии, то это означает что у противника уже начинаются проблемы. В свой ход в бою артиллерия обычно старается отойти от всех противников в радиусе 30 футов, ставит между собой и угрозой громилу, солдата или другого союзника, а затем атакует врага. Если их вынуждают вступить в ближний бой, большинство артиллерий делают все возможное, чтобы уйти, в том числе используют действие "Рывок" или "Отход". Если враги не приближаются, артиллерия двигаются так, чтобы держать противников на границе своей дистанции, и часто атакуют сначала самую большую угрозу для своих союзников.
 
-**Громила.** Громилы - выносливые существа, у которых много хитов и они наносят много урона. Возможно, это не самые дисциплинированные воины, но они компенсируют это жесткостью и агрессивностью. Громилы специализируются в причинении урона в ближнем бою. У громил относительно низкие защиты, но зато много хитов. Они попадают не очень часто, но зато при попадании причиняют большой урон. Они мало перемещаются по полю боя и они часто имеют размер Большой и более. Громилы в прямом смысле прикрывают своим телом своих союзников. Громил легко обойти, так что помещайте в сцену несколько громил одного вида, чтобы можно было создать настоящий живой заслон. Также громилы любят сосредотачивать атаки на одной цели, что в купе с их относительно высоким уроном может создавать проблемы в случае успешных попаданий.
+**Громилы** - выносливые существа, у которых много хитов и они наносят много урона. Возможно, это не самые дисциплинированные воины, но они компенсируют это жесткостью и агрессивностью. Громилы специализируются в причинении урона в ближнем бою. У громил относительно низкие защиты, но зато много хитов. Они попадают не очень часто, но зато при попадании причиняют большой урон. Они мало перемещаются по полю боя и они часто имеют размер Большой и более. Громилы в прямом смысле прикрывают своим телом своих союзников. Громил легко обойти, так что помещайте в сцену несколько громил одного вида, чтобы можно было создать настоящий живой заслон. Также громилы любят сосредотачивать атаки на одной цели, что в купе с их относительно высоким уроном может создавать проблемы в случае успешных попаданий.
 
-**Засадник.** Засадники - существа, которые хорошо скрываются не только перед встречей, но и во время нее. Они используют внезапность и скрытность, чтобы одержать верх. У засадников как правило есть способности, позволяющие избегать атак, будь то нападение из укрытия или превращение в неразрушимую статую с последующим восстановлением сил. Обычно они наносят одну мощную атаку раз в несколько раундов, концентрируясь в промежутках на своей защите. Засадники часто оказываются неожиданным для игроков дополнением к другим существам или скрытными убийцами, которые наблюдая за основным сражением, ищут удобный момент для нанесения сокрушительного удара. Засадники изучают противников, выискивая слабые места, пока персонажи игроков заняты громилами и солдатами. Часто именно с инициации засаданиками сражения во время атаки из засады по противникам начинается сражение. Они предпочитают оставаться как можно дольше незамеченными из за своих низких хитов и защит. Для их компенсации засадники как правило обладают способностями, которые позволяют им более эффективно скрываться, избегать урона, лишать противников сознания или еще каким либо образом затруднять противникам атаки по ним. Обычно половина хода засадника идет на сражение с противником, а вторая половина используется для ускользания и попыток спрятаться. Засадники наиболее эффективны, если поле сражения имеет много укрытий, которые они могут использовать.
+**Солдаты** - это хорошо бронированные существа, которые отвлекают на себя атаки противников, освобождая союзников для передвижения по полю боя. Эти обученные воины обычно имеют более высокие КЗ и бонус атаки. Солдаты специализируются в вызове атак противников на себя и защите других существ. У них высокие защиты и средние хиты. Их атаки точны, но урон невелик. Обычно они мало перемещаются и у них часто есть особенности, мешающие перемещаться врагам. Солдаты удерживают противников на месте, не давая им атаковать артиллерию и контроллеров, а также преследовать налётчиков. Также у солдат часто есть особенности, позволяющие им успешно взаимодействовать между собой, так что группа из одинаковых солдат будет прекрасно выполнять свою роль. Солдаты защищают своих союзников, отводя атаки противников. Они отлично защищают засадников, артиллерию, контролеров, лидеров и существ поддержки. Солдатам не обязательно находиться рядом с существами, которых они защищают, и даже лучше, если они этого не делают. Солдат, который оторвался от своих сил, может блокировать угрозу вдали от остальных участников боя. Во время боя солдаты сражаются с противниками, которые сильны в ближнем бою. Солдат сражается с таким количеством противников, до которого он может дотянуться, чтобы его союзники могли свободно передвигаться. Если в бою участвует более одного солдата, они обычно разделяются, каждый сражается с разными противниками.
 
-**Контроллер.** Контролеры накладывают на врагов дебаффы, перемещают их и мешают им. Они часто используют действия по борьбе с толпой, которые накладывают ослабляющий эффект или направлены сразу на несколько существ. Контроллеры манипулируют врагами на поле боя. Они ограничивают варианты вражеских действий или вводят врагов в длительные состояния, изменяют местность или погоду, либо превращают врагов в союзников. Контроллеры как правило могут постоять за себя и в боевых порядках часто находятся сразу за громилами и солдатами. Способы их воздействия могут быть абсолютно разными - некоторые существа-контролеры захватывают, глотают или иным образом фиксируют цель, не давая ей двигаться. Другие создают помехи на броски атаки с помощью состояний таких, как Отравление или Обездвиживание, или используют магию, такую как заклинания замешательства или удержания, чтобы ограничить действия противников. Контролеры заклинатели во время сражения стараются держаться от противников далее 60 футов, стараясь избежать воздействий контрзаклинаний. Многие контроллеры лучше всего работают, когда их защищают бойцы, налетчики и солдаты, использующие создаваемые ими эффекты. Контроллеры часто используют свои самые большие и мощные эффекты в начале боя, поражая как можно больше противников. Если контролер не может воздействовать на нескольких персонажей или использовать свою самую мощную способность, он сосредотачивается на манипулировании полем боя и перестановке, чтобы использовать эту способность на следующем ходу.
+Существа **поддержки** помогают своим союзникам, предоставляя им баффы, излечение, возможность передвижения или действия. Поддержка, как и лидер стремится находится на позиции, которая обеспечивает возможность оказывать воздействие на максимальное количество союзников, но при этом практически все действия поддержки будут уходить на помощь союзникам и поэтому самостоятельное воздействие поддержки на противников исключается. Поддержка как правило отличается низкими защитами и хитами, а также невысокой мобильностью, причем защита, хиты и мобильность тем хуже, чем лучше потенциал поддержки союзников. Лидеры и существа поддержки остаются рядом со своими союзниками, чтобы их характеристики могли принести пользу как можно большему числу существ. Пока существо поддержки остается в бою, его союзники получают усиление. Они наиболее эффективны, когда находятся под защитой и усиливают артиллерию, громил, налетчиков и солдат.
 
-**Лидер.** В целом – лидер не является отдельной ролью. Лидер может быть и солдатом, и громилой, и артиллерией. Лидером его делает наличие особенностей направленных на взаимодействие с союзниками, их усиление и использование. Как правило, особенности командира обеспечивают либо лечение, либо увеличение ключевых боевых характеристик (спасброски, КЗ, бонусы атаки) или же обеспечивают дополнительное маневрирование и действия. Во время сражения лидер занимает позицию, обусловленную его особенностями, которые он может применять для обеспечения преимуществ своих союзников, чтобы иметь возможность воздействовать на максимальное количество союзников а также эффективно действуя самостоятельно. Для обеспечения своей защиты лидер как правило сопровождается парой громил или солдат, которые будут сдерживать противников в их стремлении нейтрализовать лидера. А если лидер действует без таких телохранителей в сочетании с засадниками или налетчиками, то стремится проявлять осторожность, поскольку противнику будет легко переключиться с рядовых засадников или налетчиков на командира. Эффективный лидер это тот, при котором его союзники получат наивысшее преимущество от его особенностей и умений. Например, лидер, предоставляющий бонус защиты ближайшим существам, станет хорошим лидером для громил, у которых защиты слишком малы.
+**Контролеры** накладывают на врагов дебаффы, перемещают их и мешают им. Они часто используют действия по борьбе с толпой, которые накладывают ослабляющий эффект или направлены сразу на несколько существ. Контроллеры манипулируют врагами на поле боя. Они ограничивают варианты вражеских действий или вводят врагов в длительные состояния, изменяют местность или погоду, либо превращают врагов в союзников. Контроллеры как правило могут постоять за себя и в боевых порядках часто находятся сразу за громилами и солдатами. Способы их воздействия могут быть абсолютно разными - некоторые существа-контролеры захватывают, глотают или иным образом фиксируют цель, не давая ей двигаться. Другие создают помехи на броски атаки с помощью состояний таких, как Отравление или Обездвиживание, или используют магию, такую как заклинания замешательства или удержания, чтобы ограничить действия противников. Контролеры заклинатели во время сражения стараются держаться от противников далее 60 футов, стараясь избежать воздействий контрзаклинаний. Многие контроллеры лучше всего работают, когда их защищают бойцы, налетчики и солдаты, использующие создаваемые ими эффекты. Контроллеры часто используют свои самые большие и мощные эффекты в начале боя, поражая как можно больше противников. Если контролер не может воздействовать на нескольких персонажей или использовать свою самую мощную способность, он сосредотачивается на манипулировании полем боя и перестановке, чтобы использовать эту способность на следующем ходу.
 
-**Налетчики.** Налетчики - мобильные воины, использующие в бою тактику "бей и беги". Их особенности позволяют им максимально эффективно использовать свою позицию. Налётчики во всём полагаются на подвижность. Их боевые характеристики не выделяются из общего ряда, но в мобильности им нет равных.  Налетчики выступают мобильными атакующими, которые нападают на слабозащищенных противников с флангов и с тыла. Налетчики часто обладают особенностями, которые позволяют им подбегать, ударять и отступать во время одного хода. Налётчики хорошо сражаются в компании солдат и громил, потому что те стоят на месте и приковывают к себе всё внимание отряда, а у налётчиков появляется место для маневрирования. Налетчики точно делают сражения динамичными. Они могут перемещаться, чтобы атаковать уязвимых противников, которые слабее в ближнем бою, а затем отступать (если это безопасно), чтобы защитить свою артиллерию, контролера, лидера и поддержку. Поскольку они как правило являются мобильными, то могут опережать и обгонять противников, что будет заставлять их хорошо раздумывать над своими действиями. Налетчики хорошо сочетаются со всеми другими ролями существ, включая других налетчиков.
+**Засадники** - существа, которые хорошо скрываются не только перед встречей, но и во время нее. Они используют внезапность и скрытность, чтобы одержать верх. У засадников как правило есть способности, позволяющие избегать атак, будь то нападение из укрытия или превращение в неразрушимую статую с последующим восстановлением сил. Обычно они наносят одну мощную атаку раз в несколько раундов, концентрируясь в промежутках на своей защите. Засадники часто оказываются неожиданным для игроков дополнением к другим существам или скрытными убийцами, которые наблюдая за основным сражением, ищут удобный момент для нанесения сокрушительного удара. Засадники изучают противников, выискивая слабые места, пока персонажи игроков заняты громилами и солдатами. Часто именно с инициации засаданиками сражения во время атаки из засады по противникам начинается сражение. Они предпочитают оставаться как можно дольше незамеченными из за своих низких хитов и защит. Для их компенсации засадники как правило обладают способностями, которые позволяют им более эффективно скрываться, избегать урона, лишать противников сознания или еще каким либо образом затруднять противникам атаки по ним. Обычно половина хода засадника идет на сражение с противником, а вторая половина используется для ускользания и попыток спрятаться. Засадники наиболее эффективны, если поле сражения имеет много укрытий, которые они могут использовать.
 
-**Солдат.** Солдаты - это хорошо бронированные существа, которые отвлекают на себя атаки противников, освобождая союзников для передвижения по полю боя. Эти обученные воины обычно имеют более высокие КЗ и бонус атаки. Солдаты специализируются в вызове атак противников на себя и защите других существ. У них высокие защиты и средние хиты. Их атаки точны, но урон невелик. Обычно они мало перемещаются и у них часто есть особенности, мешающие перемещаться врагам. Солдаты удерживают противников на месте, не давая им атаковать артиллерию и контроллеров, а также преследовать налётчиков. Также у солдат часто есть особенности, позволяющие им успешно взаимодействовать между собой, так что группа из одинаковых солдат будет прекрасно выполнять свою роль. Солдаты защищают своих союзников, отводя атаки противников. Они отлично защищают засадников, артиллерию, контролеров, лидеров и существ поддержки. Солдатам не обязательно находиться рядом с существами, которых они защищают, и даже лучше, если они этого не делают. Солдат, который оторвался от своих сил, может блокировать угрозу вдали от остальных участников боя. Во время боя солдаты сражаются с противниками, которые сильны в ближнем бою. Солдат сражается с таким количеством противников, до которого он может дотянуться, чтобы его союзники могли свободно передвигаться. Если в бою участвует более одного солдата, они обычно разделяются, каждый сражается с разными противниками.
+**Налетчики** - мобильные воины, использующие в бою тактику "бей и беги". Их особенности позволяют им максимально эффективно использовать свою позицию. Налётчики во всём полагаются на подвижность. Их боевые характеристики не выделяются из общего ряда, но в мобильности им нет равных.  Налетчики выступают мобильными атакующими, которые нападают на слабозащищенных противников с флангов и с тыла. Налетчики часто обладают особенностями, которые позволяют им подбегать, ударять и отступать во время одного хода. Налётчики хорошо сражаются в компании солдат и громил, потому что те стоят на месте и приковывают к себе всё внимание отряда, а у налётчиков появляется место для маневрирования. Налетчики точно делают сражения динамичными. Они могут перемещаться, чтобы атаковать уязвимых противников, которые слабее в ближнем бою, а затем отступать (если это безопасно), чтобы защитить свою артиллерию, контролера, лидера и поддержку. Поскольку они как правило являются мобильными, то могут опережать и обгонять противников, что будет заставлять их хорошо раздумывать над своими действиями. Налетчики хорошо сочетаются со всеми другими ролями существ, включая других налетчиков.
 
-**Поддержка.** Существа поддержки помогают своим союзникам, предоставляя им баффы, излечение, возможность передвижения или действия. Поддержка, как и лидер стремится находится на позиции, которая обеспечивает возможность оказывать воздействие на максимальное количество союзников, но при этом практически все действия поддержки будут уходить на помощь союзникам и поэтому самостоятельное воздействие поддержки на противников исключается. Поддержка как правило отличается низкими защитами и хитами, а также невысокой мобильностью, причем защита, хиты и мобильность тем хуже, чем лучше потенциал поддержки союзников. Лидеры и существа поддержки остаются рядом со своими союзниками, чтобы их характеристики могли принести пользу как можно большему числу существ. Пока существо поддержки остается в бою, его союзники получают усиление. Они наиболее эффективны, когда находятся под защитой и усиливают артиллерию, громил, налетчиков и солдат.
+**Лидер.** В целом – *лидер не является отдельной ролью.* Лидер может быть и солдатом, и громилой, и артиллерией. Лидером его делает наличие особенностей направленных на взаимодействие с союзниками, их усиление и использование. Как правило, особенности командира обеспечивают либо лечение, либо увеличение ключевых боевых характеристик (спасброски, КЗ, бонусы атаки) или же обеспечивают дополнительное маневрирование и действия. Во время сражения лидер занимает позицию, обусловленную его особенностями, которые он может применять для обеспечения преимуществ своих союзников, чтобы иметь возможность воздействовать на максимальное количество союзников а также эффективно действуя самостоятельно. Для обеспечения своей защиты лидер как правило сопровождается парой громил или солдат, которые будут сдерживать противников в их стремлении нейтрализовать лидера. А если лидер действует без таких телохранителей в сочетании с засадниками или налетчиками, то стремится проявлять осторожность, поскольку противнику будет легко переключиться с рядовых засадников или налетчиков на командира. Эффективный лидер это тот, при котором его союзники получат наивысшее преимущество от его особенностей и умений. Например, лидер, предоставляющий бонус защиты ближайшим существам, станет хорошим лидером для громил, у которых защиты слишком малы.
+
+Также можно выделить несколько вспомогательных ролей, таких как **Атакующий**, **Защитник**, которые могут являться подтипами как **солдат**, так и **громил**, **налетчиков**, **засадников**.
+
+**Атакующие** -  это основной источник урона в бою. Наступательная мощь нападающего, как правило, заметно сильнее его защиты. Несмотря на это, нападающие не являются исключительно бойцами дальнего боя; нападающий может быть и бойцом ближнего боя. Учитывая это, многие заклинатели могут стать отличными нападающими. **Архимаги**, **драконы** и **личи** - все они являются примерами нападающих. Т.е. **артиллерия** (**снайпер**) или **солдат** могут иметь дополнительную роль - **атакующий**, которая дополнительно его характеризует.
+
+**Защитники** впитывают удары и урон и как правило являются **солдатами** или **громилами**. Они могут  наносить урон ниже среднего или быть менее точными в атаках, но имеют более высокие КЗ, Спасброски и хиты. Они часто выглядят большими и внушительными, привлекают к себе внимание, бросая вызовы и угрожая. Некоторые защитники обладают атаками или особенностями, которые приковывают персонажей к месту - их часто называют "липкими" особенностями, благодаря которым от защитника трудно уйти. Липкость также может выражаться в наложении штрафов на атаку любых существ, кроме защитника,  или аналогичных способностей, которые помогают защитнику впитывать атаки героев. Наличие большого количества защитников в бою или слишком много боев с участием защитников могут сделать бои более долгими и менее интересными. Их предназначение помогать союзникам, когда другие уязвимые противники нуждаются в помощи, чтобы не быть уничтоженными слишком быстро персонажами игроков. **Защитники** хорошо сочетаются с **налетчиками**  или **засадниками**, которые могут застать врасплох персонажей, сосредоточенных на **защитнике**. Они отлично справляются с защитой ключевых противников, особенно **артиллерии** или заклинателей **контроллеров**. **Защитники** часто размещаются на передовой линии, чтобы связать персонажей. Однако они могут занять позицию и ближе к другому существу, которое они защищают. 
 
 Также не стоит забывать, что роль не является исключительной. При определении роли существ стоит иметь в виду, что некоторые существа обладают способностями и особенностями, которые затрагивают сразу несколько ролей. Например, хотя глабрезу сильны в прямом ближнем бою, что позволяет им выступать в роли солдат, они также имеют доступ к мощным заклинаниям, таким как \*темнота\* и \*Слово силы: ошеломление\*, которые также делают их контролерами.
 
