--- a/src/content/posts/core-d20/cored20rpg-bestiary-roles-of-creatures.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-roles-of-creatures.mdx
@@ -81,6 +81,8 @@ tags:
 
 Использование различных ролей существ полезно не только с точки зрения обеспечения эффективных противников, но также и для обеспечения интереса игрока к самому процессу сражения. Вместе с тем, при наличии на поле боя существ со всеми видами ролей приводит скорее к излишнему усложнению в виду необходимости отслеживания всех взаимодействий, чтобы существа дейстовали эффективно.
 
+Помимо этих ролей еще можно сформировать аналогично четвертой редакции, "Бегите, смертные", Гиффиглифу понятие **обычного** существа, **элитного (чемпиона)** и **соло** существа. От использования миньонов мы точно воздерживаемся, поскольку это не соответствует нашему подходу к миростроению.
+
 Для каждой из ролей на основе анализа существующих статблоков в D&D 5e и совместимых продуктах можно выделить характерные особенности и действия, которыми обладают представители той или иной роли. Это нам позволит сформировать шаблоны для создания существ определенных ролей из обычных существ. 
 
 Но про шаблоны мы будем говорить в следующих материалах этого цикла.
